--- a/src/style.scss
+++ b/src/style.scss
@@ -12,14 +12,41 @@
 		width: 100%; /* Adjust based on container width */
 	}
 
+	.carousel-header {
+		font-size: var(--wp--preset--font-size--x-large) !important;
+		display: flex;
+		justify-content: space-between;
+		padding:1rem 0;
+		button {
+			background-color: #fff;
+			border: 1px solid;
+			border-radius: 2rem;
+			padding: 1rem;
+			width: 3rem;
+			height: 3rem;
+			cursor: pointer;
+			&:hover {
+				background-color:var(--wp--preset--color--dojo-mood-subtle);
+
+				color:#fff;
+			}
+		}
+	}
+
 	.carousel-container {
 		display: flex;
-		transition: transform 0.3s ease-in-out;
-		width: 300%; /* Adjust based on the number of items */
+		gap: 1rem;
+		transition: transform 1s ease-in-out;
 	}
 
 	.carousel-item {
-		flex: 1 0 100%; /* Each item takes full width */
+        flex: 0 0 calc((100% / var(--items-per-view, 1)) - 1rem); /* Adjust width based on items per view */
+		min-height: 300px;
+		background: #dfdfdf;
+		border-radius: 1rem;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
 	}
 
 }
